# uniknow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  approval.py  auth.py  case.py  file.py  graph.py  operation.py  search.py
backend/app/core/: config.py  rbac.py  security.py
backend/app/graph/: __init__.py  state.py  workflow.py
backend/app/models/: __init__.py  approval.py  database.py  user.py
backend/app/nodes/: __init__.py  case_node.py  rag_node.py  search_node.py
backend/app/schemas/: __init__.py  case.py  common.py
backend/app/services/: __init__.py  approval_service.py  case_service.py  es_service.py  graph_service.py  milvus_service.py  neo4j_service.py  rerank_service.py  search_service.py  storage_service.py
backend/app/tools/: __init__.py  embedding.py
backend/scripts/: migrate_to_milvus.py  sync_to_milvus.py
design/: document-preview.md  multi-retrieval-rerank.md  search-performance-optimization.md  template-feature.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/assets/styles/: common.scss  variables.scss
frontend/src/components/editor/: EditorSidebar.vue  (+2 more)
frontend/src/data/: templates.js
frontend/src/router/: index.js
frontend/src/services/: api.js  case.js
frontend/src/stores/: user.js
(+10 files in other folders)
